tests/snapshots/spanshot_request@12287894355122213047.snap
---
source: tests/trace_solver.rs
info:
  options:
    ref_on_ref: AllocTemporary
    mut_on_ref: Keep
    allow_ref_pat_on_ref_mut: true
    simplify_expressions: true
    eat_two_layers: false
    eat_inherited_ref_alone: true
    downgrade_shared_inside_shared: false
  request: "[&x]: &[&mut T]"
---
[&x] @ p: &[&mut T]
// Applying rule `ConstructorRef`
&x @ &(*p).0: &&mut T
// Applying rule `Deref`
x @ *&(*p).0: &mut T

// Final bindings (simplified):
let x: &mut T = (*p).0 // Borrow-check error: CantCopyRefMut
